# SurvivalOfTheFittest

./: .gitattributes  .gitignore.io  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
.cmake/api/v1/reply/: cache-v2-c30ae5df636ad15e8107.json  cmakeFiles-v1-8657d850f3ef2a190bef.json  codemodel-v2-c1241e7095caab800370.json  index-2024-02-19T08-29-09-0963.json  target-fittest-5343a1d0945a926c9da1.json
doc/html/: index.html  md_documentation.html  pages.html
doc/html/search/: all_0.js  all_1.js
doc/latex/: index.tex  md_documentation.tex  refman.tex
doc/uml_src/: class.pu  proc.pu  uc.pu
include/: Engine.hpp  FileHandler.hpp  Living.hpp  ProjectHandler.hpp
res/: git-repo-commands.txt
src/: FileHandler.cpp  ProjectHandler.cpp  engine.cpp  living.cpp  main.cpp
